# ckmame

./: .clang-format  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.md  LICENSE  Makefile.am  NEWS  NEWS.md  README  README-snapshot.md  README.DOS  README.md  THANKS  TODO  TODO.md  acconfig.h  acinclude.m4  aclocal.m4.fixed  appveyor.yml  chd-supp.c  chd.c  chd.h  ckmame.c  ckmame.man  ckmame.mdoc  ckmame.texi  cmake-config.h.in  config.guess  config.sub  configure.ac  configure.in  db-db.c  db-db.h  db-gdbm.c  (+78 more)
.github/workflows/: build.yml  coverity.yml
contrib/: mamediffs.pl  mess-prepare-xml  nintendo-64.xml
docs/: CMPro.shtml  CMakeLists.txt  ListinfoHistory.shtml  Makefile.am  RomCenter.html  ckmame.html  ckmame.man  ckmame.mdoc  ckmamerc.html  ckmamerc.man  ckmamerc.mdoc  ckstatus.html  ckstatus.man  ckstatus.mdoc  db-format  detective.html  detective.man  detective.mdoc  dumpgame.html  dumpgame.man  dumpgame.mdoc  mame-0.159.dtd  mame-0.163.dtd  mame-0.96.dtd  mess-0.97.dtd  mkmamedb.html  mkmamedb.man  mkmamedb.mdoc  wwwprofiler.txt  xmlheaders.txt
man/: Makefile.am  ckmame.man  ckmame.mdoc  dumpgame.man  dumpgame.mdoc  mkmamedb.man  mkmamedb.mdoc
regress/: 1-4-as-2-48.ckmamedb-dump  1-4-g.test  1-4-ok-1-8-ok.ckmamedb-dump  1-4-ok-with-mtime.ckmamedb-dump  1-4-ok.ckmamedb-dump  1-4-ok.test  1-4-ok.tzip  1-8-ok.ckmamedb-dump  12-1.chd  2-48-ok.7z  2-4c-reverse.ckmamedb-dump  512v5.chd  CMakeLists.txt  CkmameDB.pm  Makefile.am  NiHTest.pm  TODO  archive-broken.test  archive-broken.zip.test  archive-broken2.test  archive-broken2.zip.test  baddump.test  baddump.vtest  can-preload.c  ckmame-all-sets-1.test  ckmame-all-sets-2.test  ckmame-all-sets-2.vtest  ckmame-all-sets-3.test  ckmame-all-sets-3.zip.test  ckmame-complete-list.test  ckmame-complete-list.vtest  ckmame-dont-update-database.test  ckmame-dont-update-database.vtest  ckmame-extra-dir-and-subdir.test  ckmame-game-list.test  ckmame-game-list.vtest  ckmame-list-sets.test  ckmame-missing-list-changed.test  ckmame-missing-list-changed.vtest  ckmame-missing-list.test  (+748 more)
regress/data/: 1-8-ok-v2-ckmame.db  missing-list.txt  unknown-file
regress/dats/: detector-broken.xml  detector.xml  mamedb-detector.xml  mamedb-header-only.xml  mamedb-mame.xml  mamedb-merge-wrong-name.xml  mamedb-mess.xml  mamedb-parent-crcdiff-mame.xml  mamedb-whitespace.xml  mamedb.cmpro-bad  mamedb.rc
regress/dumps/: 1-4-ok-1-8-ok.ckmamedb-dump  1-4-ok-with-mtime.ckmamedb-dump  1-8-ok-v2-migrated.ckmamedb-dump  2-4c-ok.ckmamedb-dump  2-4c-reverse.ckmamedb-dump  empty.ckmamedb-dump  mame-use-name-as-description.dump  mamedb-cmpro-bad-ok.dump  mamedb-doublezip.dump  mamedb-duplicate-game.dump  mamedb-duplicate-nodump.dump  mamedb-duplicate-rom-name.dump  mamedb-empty-2.dump  mamedb-empty.dump  mamedb-game-name-suffix.dump  mamedb-lost-parent.dump  mamedb-mame.dump  mamedb-mess.dump  mamedb-mia-games.dump  mamedb-mia.dump  mamedb-missing-size.dump  mamedb-no-name.dump  mamedb-parent-crcdiff-mame.dump  mamedb-parent-crcdiff.dump  mamedb-size-hex.dump  mamedb-small.dump  mamedb-whitespace.dump  mamedb-zero-bad.dump  mkmamedb-datdb-1.dump  mkmamedb-datdb-4.dump  mkmamedb-datdb-5.dump  mkmamedb-datdb-8.dump  mkmamedb-datdb-9.dump  mkmamedb-datdb-empty.dump  mkmamedb-db-ignore-detector.dump  mkmamedb-db.dump  rom-from-extra-size-changed.ckmamedb-dump  wrongname-nohash.ckmamedb-dump
regress/fixdats/: fixdat-missing-all.fixdat  rom-from-superfluous-many-fixdat.fixdat
regress/old/: archive-broken2.test  ckmame-missing-list.test  ckmame-multi-sets-2.test  ckmame-only-if-database-updated-2.test  ckmame-update-database-1.test  ckmame.test  config-fixdat-directory.test  config-home-set.test  config-home.test  config-keep-old-duplicate.test  config-local-set-overrides-home-set.test  config-no-create-fixdat.test  config-old-db.test  config-report-detailed.test  config-report-fixable.test  config-report-missing.test  config-report-no-good-dump.test  config-report-summary.test  config-sets-file.test  config-unknown-directory.test  config-use-central-cache-directory.test  detector-from-extra-cleanup-no-header.test  detector-interaction-with-headerless.test  disk-from-extra-remove.test  disk-nogood-copy.test  disk-ok.test  disk-swapmerge.test  disk-toplevel.test  disk-unrelated-fix.test  disk-wrong.test  doublezip.test  dumpgame-brief.test  dumpgame-checksum-md5-file.test  dumpgame-game.test  dumpgame-games.test  dumpgame-list-sets.test  dumpgame-rom-db.test  dumpgame-summary.test  file-no-crc-wrong-name-other-set.test  fixdat-missing-all.test  (+89 more)
regress/programs/: can-preload.c  compare-archives.cc  compare-ckmamedb  convert_to_dir_variant.py  dbdump.cc  dbrestore.cc  fix-dump  fixdat-reset-version  fwrite.c  nihtest-preload.h  rename.c  unpack.c
regress/roms/: 108-2.chd  108-5.chd  108-5a.chd  2-8u-ok.7z
regress/support/: nihtest.conf.in
src/: Archive.cc  Archive.h  ArchiveDir.cc  ArchiveDir.h  ArchiveImages.cc  ArchiveImages.h  ArchiveLibarchive.cc  ArchiveLibarchive.h  ArchiveLocation.cc  ArchiveLocation.h  ArchiveZip.cc  ArchiveZip.h  CMakeLists.txt  Chd.cc  Chd.h  CkMame.h  CkStatus.h  CkmameCache.cc  CkmameCache.h  CkmameDB.cc  CkmameDB.h  Command.cc  Command.h  Commandline.cc  Commandline.h  Configuration.cc  Configuration.h  DB.cc  DB.h  DBStatement.cc  DBStatement.h  DatDb.cc  DatDb.h  DatEntry.cc  DatEntry.h  DatRepository.cc  DatRepository.h  DeleteList.cc  DeleteList.h  Detector.cc  (+472 more)
xcode/: config.h
xcode/ckmame.xcodeproj/: project.pbxproj
xcode/ckmame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/ckmame.xcodeproj/xcshareddata/xcschemes/: compare-archives.xcscheme
